--- a/geppetto/Views/Storyboards/Profile/Profile.storyboard
+++ b/geppetto/Views/Storyboards/Profile/Profile.storyboard
@@ -41,11 +41,11 @@
                                 <rect key="frame" x="0.0" y="309" width="414" height="504"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Old-qK-bbA" customClass="Moments" customModule="geppetto" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Old-qK-bbA" customClass="Favorites" customModule="geppetto" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="309" width="414" height="504"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uap-BM-IS0" customClass="Moments" customModule="geppetto" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uap-BM-IS0" customClass="History" customModule="geppetto" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="309" width="414" height="504"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
@@ -75,8 +75,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="lou-43-4eT"/>
                     <connections>
-                        <outlet property="favoritesView" destination="Old-qK-bbA" id="Dja-Ab-6Hv"/>
-                        <outlet property="historyView" destination="uap-BM-IS0" id="eps-ei-blK"/>
+                        <outlet property="favoritesView" destination="Old-qK-bbA" id="nrE-od-eHg"/>
+                        <outlet property="historyView" destination="uap-BM-IS0" id="hIS-GO-9Fc"/>
                         <outlet property="momentsView" destination="aXb-Nc-bQz" id="t0F-IY-gIM"/>
                         <outlet property="profileImage" destination="cnx-Os-672" id="IOO-Ta-ewv"/>
                         <outlet property="profileSegmentedControl" destination="IUf-Tc-M96" id="byo-Rv-Rtn"/>
