--- a/geppetto/Views/Storyboards/Profile/Favorites.xib
+++ b/geppetto/Views/Storyboards/Profile/Favorites.xib
@@ -4,14 +4,15 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Favorites" customModule="geppetto" customModuleProvider="target">
             <connections>
-                <outlet property="favoritesLabel" destination="j8R-4r-W71" id="l0b-mp-uOF"/>
                 <outlet property="favoritesView" destination="iN0-l3-epB" id="DTe-vQ-vBC"/>
+                <outlet property="stack" destination="Uot-KP-Ohk" id="yNp-hN-oFz"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,21 +20,32 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="496"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello people" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8R-4r-W71">
-                    <rect key="frame" x="126" y="252" width="162" height="36"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Uot-KP-Ohk">
+                    <rect key="frame" x="0.0" y="44" width="414" height="256"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AP2-et-r0S">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="256"/>
+                            <color key="backgroundColor" name="AccentColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="256" id="eh3-Gj-kCR"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" red="0.37647058820000001" green="0.1176470588" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="j8R-4r-W71" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="2ix-wa-y7k"/>
-                <constraint firstItem="j8R-4r-W71" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="Wa1-lu-SSB"/>
+                <constraint firstItem="Uot-KP-Ohk" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ES8-fg-7tS"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Uot-KP-Ohk" secondAttribute="trailing" id="QkN-WE-b9N"/>
+                <constraint firstItem="Uot-KP-Ohk" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="y0l-Zg-qqI"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="132" y="68"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="AccentColor">
+            <color red="0.90588235294117647" green="0.34509803921568627" blue="0.4823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
