--- a/geppetto/Views/Storyboards/Profile/Moments.xib
+++ b/geppetto/Views/Storyboards/Profile/Moments.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,15 +16,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="496"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="504"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="yQV-y2-Oxf">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="496"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VCW-yd-YD5">
-                        <size key="itemSize" width="128" height="128"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="yQV-y2-Oxf">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="504"/>
+                    <color key="backgroundColor" red="0.37647058820000001" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="VCW-yd-YD5">
+                        <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -33,15 +31,16 @@
                 </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <constraints>
+                <constraint firstItem="yQV-y2-Oxf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="6qq-1G-UJG"/>
+                <constraint firstItem="yQV-y2-Oxf" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="IAY-li-Tng"/>
+                <constraint firstAttribute="top" secondItem="yQV-y2-Oxf" secondAttribute="top" id="bzx-Zs-tMv"/>
+                <constraint firstAttribute="bottom" secondItem="yQV-y2-Oxf" secondAttribute="bottom" id="hez-md-ZAd"/>
+            </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="165.21739130434784" y="20.089285714285712"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
