--- a/geppetto/Views/Storyboards/Profile/MomentsCell.xib
+++ b/geppetto/Views/Storyboards/Profile/MomentsCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,27 +13,28 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomCell" id="gTV-IL-0wX" customClass="MomentsCell" customModule="geppetto" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-            <autoresizingMask key="autoresizingMask"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OBc-3l-8Tb">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" id="OBc-3l-8Tb">
                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                     </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <constraints>
-                <constraint firstAttribute="bottom" secondItem="OBc-3l-8Tb" secondAttribute="bottom" id="45T-xV-F60"/>
-                <constraint firstItem="OBc-3l-8Tb" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="94H-vR-MdV"/>
-                <constraint firstItem="OBc-3l-8Tb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="kw4-4O-o6n"/>
-                <constraint firstAttribute="trailing" secondItem="OBc-3l-8Tb" secondAttribute="trailing" id="vTB-cQ-6Qc"/>
-            </constraints>
+            <color key="backgroundColor" systemColor="systemYellowColor"/>
             <connections>
                 <outlet property="momentsImage" destination="OBc-3l-8Tb" id="qbs-Fa-EdQ"/>
             </connections>
             <point key="canvasLocation" x="139" y="38"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
