--- a/geppetto/Views/Storyboards/Profile/Profile.storyboard
+++ b/geppetto/Views/Storyboards/Profile/Profile.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="IUf-Tc-M96">
-                                <rect key="frame" x="16" y="270" width="382" height="32"/>
+                                <rect key="frame" x="16" y="254" width="382" height="32"/>
                                 <segments>
                                     <segment title="Momentos"/>
                                     <segment title="Favoritos"/>
@@ -31,22 +31,22 @@
                                 </connections>
                             </segmentedControl>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cnx-Os-672">
-                                <rect key="frame" x="0.0" y="104" width="414" height="150"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="150"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="cnx-Os-672" secondAttribute="height" multiplier="69:25" id="os8-JH-c9M"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aXb-Nc-bQz" customClass="Moments" customModule="geppetto" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="309" width="414" height="504"/>
+                                <rect key="frame" x="0.0" y="301" width="414" height="512"/>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Old-qK-bbA" customClass="Favorites" customModule="geppetto" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="309" width="414" height="504"/>
+                                <rect key="frame" x="0.0" y="301" width="414" height="512"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uap-BM-IS0" customClass="History" customModule="geppetto" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="309" width="414" height="504"/>
+                                <rect key="frame" x="0.0" y="301" width="414" height="512"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                         </subviews>
@@ -57,18 +57,18 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="aXb-Nc-bQz" secondAttribute="bottom" id="6H9-qB-FU3"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="uap-BM-IS0" secondAttribute="bottom" id="8tc-ve-547"/>
                             <constraint firstItem="IUf-Tc-M96" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="9Xa-3N-g4c"/>
-                            <constraint firstItem="Old-qK-bbA" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="8" symbolic="YES" id="BCW-Wq-rgj"/>
+                            <constraint firstItem="Old-qK-bbA" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="16" id="BCW-Wq-rgj"/>
                             <constraint firstItem="IUf-Tc-M96" firstAttribute="top" secondItem="cnx-Os-672" secondAttribute="bottom" constant="16" id="GSW-sj-s89"/>
                             <constraint firstAttribute="trailing" secondItem="cnx-Os-672" secondAttribute="trailing" id="GY1-Ts-a1G"/>
                             <constraint firstItem="Old-qK-bbA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Kju-Jn-mga"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="IUf-Tc-M96" secondAttribute="trailing" constant="16" id="Pjf-is-qzS"/>
                             <constraint firstItem="aXb-Nc-bQz" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="S4u-vt-WEY"/>
                             <constraint firstItem="Old-qK-bbA" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="TJT-fG-VPY"/>
-                            <constraint firstItem="aXb-Nc-bQz" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="8" symbolic="YES" id="Xbm-QO-iCd"/>
-                            <constraint firstItem="uap-BM-IS0" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="8" symbolic="YES" id="YI0-Un-eu2"/>
+                            <constraint firstItem="aXb-Nc-bQz" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="16" id="Xbm-QO-iCd"/>
+                            <constraint firstItem="uap-BM-IS0" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="16" id="YI0-Un-eu2"/>
                             <constraint firstItem="uap-BM-IS0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="boD-sf-ZDu"/>
                             <constraint firstItem="cnx-Os-672" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="faW-Xs-Q5B"/>
-                            <constraint firstItem="cnx-Os-672" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="16" id="laz-C5-Anp"/>
+                            <constraint firstItem="cnx-Os-672" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="laz-C5-Anp"/>
                             <constraint firstItem="aXb-Nc-bQz" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="p0j-Ys-vnD"/>
                             <constraint firstItem="uap-BM-IS0" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="rJr-GH-ZzY"/>
                         </constraints>
